Fix-navigation-spacing (#3928)

--- a/_static/custom.css
+++ b/_static/custom.css
@@ -303,6 +303,24 @@ div.body p, div.body dd, div.body li {
   line-height: 1.6;
 }
 
+div.sphinxsidebar h3 {
+  line-height: 1.25;
+}
+
+div.sphinxsidebar li {
+  line-height: 1.5;
+  margin-bottom: .25rem;
+}
+
+div.sphinxsidebar input {
+  font-family: "Instrument Sans", system, -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
+}
+
+.pagefind-ui__form {
+  margin-bottom: 1rem;
+}
+
+
 img.logo {
   content: url("/_static/logo-text-on-light.svg");
 }
